# surge-reth

./: Cargo.toml
crates/chainspec/src/: spec.rs
crates/consensus/auto-seal/src/: lib.rs
crates/consensus/common/src/: validation.rs
crates/ethereum-forks/src/hardfork/: ethereum.rs
crates/ethereum/consensus/src/: lib.rs  validation.rs
crates/ethereum/evm/src/: execute.rs  taiko.rs
crates/ethereum/payload/src/: lib.rs
crates/evm/execution-types/src/: execute.rs
crates/evm/src/: execute.rs  metrics.rs  test_utils.rs
crates/net/dns/src/: resolver.rs
crates/net/eth-wire-types/src/: blocks.rs
crates/net/p2p/src/: full_block.rs
crates/optimism/payload/src/: builder.rs
crates/primitives/: Cargo.toml
crates/primitives-traits/src/: alloy_compat.rs
crates/primitives-traits/src/header/: mod.rs  sealed.rs  test_utils.rs
crates/primitives/src/: alloy_compat.rs  block.rs  header.rs  lib.rs  receipt.rs
crates/primitives/src/transaction/: mod.rs
crates/rpc/rpc-layer/: Cargo.toml
crates/rpc/rpc-types-compat/src/: block.rs
crates/storage/db/: Cargo.toml
crates/storage/db-api/: Cargo.toml
crates/storage/errors/src/: provider.rs
crates/taiko/chainspec/: Cargo.toml
crates/taiko/chainspec/src/: lib.rs  spec.rs
crates/taiko/consensus/: Cargo.toml
crates/taiko/consensus/src/: anchor.rs  lib.rs  taiko_beacon_consensus.rs  taiko_simple_consensus.rs
crates/taiko/evm/src/: config.rs  execute.rs  lib.rs
crates/taiko/hardforks/: Cargo.toml
crates/taiko/hardforks/src/: hardfork.rs
crates/taiko/node/: Cargo.toml
testing/ef-tests/src/: models.rs
(+6 files in other folders)
