[package]
name = "reth-taiko-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-consensus-common.workspace = true
reth-primitives = { workspace = true, features = ["taiko"] }
reth-primitives-traits = { workspace = true, optional = true }
reth-consensus.workspace = true
reth-chainspec = { workspace = true }
reth-ethereum-consensus.workspace = true
reth-provider = { workspace = true, optional = true }

# Alloy
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Revm
revm-primitives = { workspace = true }

# Misc
once_cell.workspace = true
eyre.workspace = true

[features]
default = ["beacon-consensus"]
beacon-consensus = ["dep:reth-provider", "dep:reth-primitives-traits"]
